--- a/src/assets/sass/components/_contact.scss
+++ b/src/assets/sass/components/_contact.scss
@@ -11,6 +11,12 @@
     }
 }
 
+.input-msg{
+    .MuiInputBase-formControl{ 
+        min-height: 180px;
+    }
+}
+
 .contact-info{
     @include display-flex;
     @include flex-direction(column);
@@ -21,8 +27,17 @@
 
     p{
         @include display-flex;
+        color:#000;
         svg{
             margin-right:10px;
+        }
+    }
+
+    a{
+        color:#000;
+        text-decoration: none;
+        &:hover{
+            color:blue;
         }
     }
 }
